[project]
name = "ev-mdt"
version = "0.1.0"
description = "Optimal EV Charging under Stochastic Departure Times and Prices"
requires-python = ">=3.13"
dependencies = [
    "entsoe-py>=0.8.0",
    "fpdf2>=2.8.7",
    "kaleido>=1.3.0",
    "matplotlib>=3.10",
    "numpy>=2.0",
    "pandas>=2.0",
    "plotly>=6.7.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "streamlit>=1.40",
    "torch>=2.12.0",
    "wandb>=0.19.0",
]

[project.scripts]
ev_mdt = "ev_mdt.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["ev_mdt"]
